# Lightbulb

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sources.txt
Kaleidoscope/: AST.cpp  AST.h  Kaleidoscope.cpp  Kaleidoscope.h  Lexer.cpp  Parser.cpp  Parser.h
Lightbulb/: AST.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Lightbulb.cpp  Lightbulb.h
mincc/: CMakeLists.txt  README.md  ast.h  lexer.cpp  lexer.h  mincc.cpp  mincc.h  parser.cpp  parser.h  token.h
testfiles/mincc/: test3.c  test4.c  test5.c
